name:                photogrammeter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matthewscottgordon/photogrammeter#readme
license:             BSD3
license-file:        LICENSE
author:              "Matthew Gordon"
maintainer:          matthew.scott.gordon@gmail.com
copyright:           MIT
category:            "Computer Vision"
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable photogrammeter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , JuicyPixels >= 3.2.8.2
                     , photogrammeter
                     , optparse-applicative
  default-language:    Haskell2010

test-suite photogrammeter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , photogrammeter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matthewscottgordon/photogrammeter
